--- a/.github/workflows/deploy_template.yml
+++ b/.github/workflows/deploy_template.yml
@@ -37,8 +37,8 @@ jobs:
       with:
         aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        application_name: MyApplicationName
-        environment_name: MyApplication-Environment
-        version_label: 12345
-        region: us-west-2
+        application_name: docker-test
+        environment_name: Dockertest-env
+        version_label: lab102
+        region: us-west-1
         deployment_package: deploy.zip
